2003-06-18  Ahmon Dancy  <dancy@dancy>

	* maild.cl: Make use of updated with-command-line-arguments
	patches.  Process -oi option... ignores other unrecognized
	options.  Ignores -bi command line arg.

2003-06-08  root  <root@gills.dancysoft.com>

	* deliver.cl: Add the "From " separator to messages being
	delivered to programs and to files.

	* aliases.cl:  Supports wildcard aliases now.

	* checkers.cl:  Added support for external checker programs.

	* config.cl:  Removed *virtusersfile*.  Not used anymore.  Added
	*external-checker-user* variable for specifying user under which
	external checkers run.

	* deliver-smtp.cl:  Fixed check for nxdomain.

	* deliver.cl:  When delivering to program alias, use
	*program-alias-user*, not *local-delivery-user*.

	* recips.cl:  Fixed buglet.

	* virtusers.cl:  Removed.   Implemented in aliases.

2003-06-06  Ahmon Dancy  <dancy@dancy>

	* config.cl:  New parameter.  *extra-headers-func* for specifying
	the a function that will be called to add additional message
	headers when a queue item is being finalized.

	* emailaddr.cl:  Added unquote-quoted-string.

	* headers.cl:  Don't add the envelope recipient list to the
	Received header.  

	* load.cl:  Added break-on-warnings.

	* queue.cl: Added queue-append-header, queue-replace-header, and
	queue-locate-header convenience functions (intended for use in an
	*extra-headers-func*).
	
	* utils.cl: removed unquote-quoted-string.
	
2003-05-19  root  <root@dancy>

	* config.cl:  Parameterized the blacklisted host message in a new
	*blacklisted-response* variable.  Added a new *maximum-hop-count*
	parameter as well.   Changed *smtp-data-checkers* to
	*message-data-checkers* since they are used during stdin reciption
	and smtp reception.  The default list of checkers is the size
	check and the max hop count check.

	* checkers.cl:  New.  Has hop count and message size checkers.

	* headers.cl:  New count-received-headers function.
